Fix icon alignment on panel button.

--- a/web/release/ogres.app.css
+++ b/web/release/ogres.app.css
@@ -1358,12 +1358,15 @@ a:visited {
       justify-content: center;
 
       button {
+        align-items: center;
         background: none;
         border: none;
         color: var(--color-blues-100);
         cursor: pointer;
+        display: flex;
         flex: 1;
         height: 100%;
+        justify-content: center;
 
         &:hover {
           color: var(--color-paper-500);
@@ -2322,7 +2325,7 @@ a:visited {
             flex: 3;
             svg use {
               transform-origin: 50% 50%;
-              transform: translate(0, -1px) rotate(90deg);
+              transform: rotate(90deg);
             }
           }
         }
